--- a/index.html
+++ b/index.html
@@ -12,36 +12,60 @@
   </head>
   <body>
     <div class="container">
-      <nav>
+      <nav class="nav_head">
         <ul class="nav__links nav__left">
-          <li><a href="#" class="logo"></a></li>
-          <li><a href="#">Store</a></li>
-          <li><a href="#">Shop</a></li>
-          <li><a href="#">Collection</a></li>
+          <li><a href="#" class="logo">BOLD VIEW</a></li>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#">Categories</a></li>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">Help Us</a></li>
         </ul>
         <ul class="nav__links nav__right">
-          <li><a href="#">Payment</a></li>
+          <li><span><a href="#">Payment</a></span></li>
           <li><a href="#" id="loginLink">Login/Register</a></li>
           <li><a href="#">profile</a></li>
         </ul>
       </nav>
-      
-      <img src="icons/logo-png-removebg.png" alt="header" />
-      <h4 class="text__left" style="background: none;">BOLD</h4>
-      <h4 class="text__right" style="background: transparent;">VIEWS</h4>
+
+      <img src="icons/logo-png-removebg.png" alt="header" class="logo" />
+      <h4 class="text__left" style="background: none">BOLD</h4>
+      <h4 class="text__right" style="background: none">VIEWS</h4>
+      <h3 class="subtext">
+        Ready to elevate your brand? Step inside to see how Bold Views Studio
+        brings your vision to life.
+      </h3>
       <button class="btn explore">EXPLORE MORE</button>
       <h5 class="feature-1">Reels</h5>
       <h5 class="feature-2">Photoshoot</h5>
       <h5 class="feature-3">Video Editing</h5>
       <h5 class="feature-4">Videography</h5>
-      <footer class="footer">
-        <div class="footer__links">
-          <li><a href="#">Facebook</a></li>
-          <li><a href="#">Instagram</a></li>
-          <li><a href="#">Twitter</a></li>
-        </div>
-      </footer>
     </div>
+    <!-- About us -->
+    <section class="about-us" id="about">
+      <div class="about-image">
+        <img src="images/about.jpg" alt="About Us" />
+      </div>
+      <div class="about-content">
+        <h2>About Us</h2>
+        <p>
+          "BoldView Studios is dedicated to crafting meaningful and memorable
+          visual content. We specialize in video and photo shoot services for
+          cafes, hotels, and retail shops. 
+        </p>
+        <p>
+          Our talented team of managers,
+          creators, and editors bring a fresh perspective to each project,
+          amplifying your brands essence."
+        </p>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="footer__links">
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Twitter</a></li>
+      </div>
+    </footer>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="main.js"></script>
   </body>
